# huffman

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
benchmark/src/encode/: build-huffman-table.h  main.h
scripts/analysis/: clang-tidy  flawfinder  run_cppcheck.sh  run_cpplint.sh  valgrind
src/: main.cpp
src/hm/: common.h  decode-tree.h  decode.h  encode-tree.h  encode.h  exception.h
src/sp/: file-exists.h  program-options-validate.h  program-options.h
test/: CMakeLists.txt
test/src/: main.cpp
test/src/hlp/: byte-vector-to-entity.h  get-test-data.h  is-same-meta.h  main.h  testing-types.h
test/src/hm/common/: main.h
test/src/hm/decode/: decode-data.h  decode-entities.h  decode-meta-data.h  decode-tree.h  decode.h  main.h
test/src/hm/decode-tree/: main.h
test/src/hm/encode/: build-frequency-table.h  build-huffman-table.h  build-huffman-tree.h  encode-data.h  encode-entities.h  encode-meta-data.h  encode-tree.h  encode.h  main.h
test/src/hm/encode-tree/: main.h
